# Qt-Multithreading

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: Controller.h  Magic.h  Processor.h  Worker.h  WorkerController.h
src/examples/one/: Communicator.h  ConcreteProcessor.h  ConcreteWorker.h  main.cpp
src/examples/three/: CollatzProcessor.h  CollatzWorker.h  main.cpp
src/examples/two/: main.cpp
